--- a/doc/doc.am
+++ b/doc/doc.am
@@ -18,7 +18,6 @@
 dist_doc_DATA = \
 	doc/barrett_diagram \
 	doc/debugging.html \
-	doc/gc.man \
 	doc/gcdescr.html \
 	doc/README \
 	doc/README.amiga \
@@ -52,3 +51,5 @@ dist_doc_DATA = \
 	doc/README.darwin \
 	doc/simple_example.html \
 	doc/porting.html
+
+dist_man3_MANS = doc/gc.man
