--- a/doc/doc.am
+++ b/doc/doc.am
@@ -38,7 +38,6 @@ dist_doc_DATA = \
         doc/README.win64 \
         doc/debugging.html \
         doc/finalization.html \
-        doc/gc.man \
         doc/gcdescr.html \
         doc/gcinterface.html \
         doc/leak.html \
@@ -47,4 +46,6 @@ dist_doc_DATA = \
         doc/scale.html \
         doc/simple_example.html \
         doc/tree.html
+
+dist_man3_MANS = doc/gc.man
 endif
