--- a/.travis.yml
+++ b/.travis.yml
@@ -92,7 +92,7 @@ matrix:
   - os: linux
     compiler: gcc
     env:
-    - CONF_OPTIONS="--enable-large-config --enable-munmap --enable-cplusplus"
+    - CONF_OPTIONS="--enable-large-config --enable-munmap --enable-cplusplus --enable-gc-assertions --enable-static"
     - WORKAROUND_ACLOCAL_MISSING=true
   - os: linux
     compiler: clang
