Remove unused HAVE_GETCONTEXT macro definition in configure (fix of commits 7c13fb8fc, 99134699a)
* configure.ac (getcontext): Replace AC_CHECK_FUNCS to AC_CHECK_FUNC.
* configure.ac [!ac_cv_func_getcontext] (NO_GETCONTEXT): Move AC_DEFINE
to action-if-not-found argument of AC_CHECK_FUNC.

--- a/configure.ac
+++ b/configure.ac
@@ -435,10 +435,8 @@ if test "$GCC" = yes; then
 fi
 
 # Check for getcontext (uClibc can be configured without it, for example)
-AC_CHECK_FUNCS([getcontext])
-if test "$ac_cv_func_getcontext" = "no"; then
-  AC_DEFINE([NO_GETCONTEXT], [1], [Missing getcontext()])
-fi
+AC_CHECK_FUNC([getcontext], [],
+    [ AC_DEFINE([NO_GETCONTEXT], [1], [Missing getcontext()]) ])
 
 # Check whether dl_iterate_phdr exists (as a strong symbol).
 AC_CHECK_FUNCS([dl_iterate_phdr])
