--- a/.travis.yml
+++ b/.travis.yml
@@ -587,7 +587,7 @@ script:
     ~/cppcheck/cppcheck -q -f --error-exitcode=2 -U GC_API -U long -D CPPCHECK
         -I include -I libatomic_ops/src $CPPCHECK_ENABLE
         *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc tools/*.c
-        extra/gc.c extra/pcr_interface.c;
+        extra/gc.c;
   fi
 - if [[ "$TESTS_CUSTOM_RUN" == true ]]; then
     ASAN_OPTIONS="detect_leaks=1" UBSAN_OPTIONS="halt_on_error=1"
