--- a/Makefile.direct
+++ b/Makefile.direct
@@ -80,14 +80,14 @@ RANLIB= ranlib
 
 OBJS= alloc.o reclaim.o allchblk.o misc.o mach_dep.o os_dep.o mark_rts.o \
   headers.o mark.o obj_map.o blacklst.o finalize.o new_hblk.o dbg_mlc.o  \
-  malloc.o stubborn.o checksums.o pthread_support.o pthread_stop_world.o \
+  malloc.o checksums.o pthread_support.o pthread_stop_world.o \
   darwin_stop_world.o typd_mlc.o ptr_chck.o mallocx.o gcj_mlc.o specific.o \
   gc_dlopen.o backgraph.o win32_threads.o pthread_start.o \
   thread_local_alloc.o fnlz_mlc.o atomic_ops.o atomic_ops_sysdeps.o
 
 CSRCS= reclaim.c allchblk.c misc.c alloc.c mach_dep.c os_dep.c mark_rts.c \
   headers.c mark.c obj_map.c blacklst.c finalize.c \
-  new_hblk.c dyn_load.c dbg_mlc.c malloc.c stubborn.c \
+  new_hblk.c dyn_load.c dbg_mlc.c malloc.c \
   checksums.c pthread_support.c pthread_stop_world.c darwin_stop_world.c \
   typd_mlc.c ptr_chck.c mallocx.c gcj_mlc.c specific.c gc_dlopen.c \
   backgraph.c win32_threads.c pthread_start.c thread_local_alloc.c fnlz_mlc.c
