Fix comments style in configure.ac and Makefile.am (code refactoring)
Do not allow the comments that are meaningless in the auto-generated
configure and Makefile.in to be put to these files.

* Makefile.am (EXTRA_DIST, SINGLE_GC_OBJ, EXTRA_DIST,
include doc/doc.am): Change comment style from "#" to "##".
* Makefile.am (CPLUSPLUS): Move "#" inside the conditional block.
* configure.ac: Update the copyright.
* configure.ac: Change comment style from "#" to "dnl" for the comments
that are meaningless in auto-generated configure file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,7 +38,7 @@ AM_CPPFLAGS = \
     -I$(top_builddir)/include -I$(top_srcdir)/include \
     $(ATOMIC_OPS_CFLAGS)
 
-# Initialize variables so that we can declare files locally.
+## Initialize variables so that we can declare files locally.
 EXTRA_DIST =
 lib_LTLIBRARIES =
 include_HEADERS =
@@ -107,7 +107,7 @@ if ENABLE_DISCLAIM
 libgc_la_SOURCES += fnlz_mlc.c
 endif
 
-# End of !SINGLE_GC_OBJ
+## End of !SINGLE_GC_OBJ
 endif
 
 if USE_INTERNAL_LIBATOMIC_OPS
@@ -128,11 +128,9 @@ libgc_la_LDFLAGS = $(extra_ldflags_libgc) -version-info $(LIBGC_VER_INFO) \
 EXTRA_libgc_la_SOURCES = ia64_save_regs_in_stack.s sparc_mach_dep.S \
     sparc_netbsd_mach_dep.s sparc_sunos4_mach_dep.s
 
-
+if CPLUSPLUS
 # C++ Interface
 # -------------
-
-if CPLUSPLUS
 lib_LTLIBRARIES += libgccpp.la
 pkginclude_HEADERS += include/gc_cpp.h
 include_HEADERS += include/extra/gc_cpp.h
@@ -141,9 +139,9 @@ libgccpp_la_LIBADD = ./libgc.la
 libgccpp_la_LDFLAGS = -version-info $(LIBGCCPP_VER_INFO) -no-undefined
 endif
 
-# FIXME: If Visual C++ users use Makefile.am, this should go into
-# pkginclude_HEADERS with proper AM_CONDITIONALization.  Otherwise
-# delete this comment.
+## FIXME: If Visual C++ users use Makefile.am, this should go into
+## pkginclude_HEADERS with proper AM_CONDITIONALization.  Otherwise
+## delete this comment.
 EXTRA_DIST += gc_cpp.cpp
 
 
@@ -224,5 +222,5 @@ include include/include.am
 include cord/cord.am
 include tests/tests.am
 include doc/doc.am
-# Putting these at the top causes cord to be built first, and not find libgc.a
-# on HP/UX.  There may be a better fix.
+## Putting these at the top causes cord to be built first, and not find
+## libgc.a on HP/UX.  There may be a better fix.
