Remove C++ WeakPointer and CleanUp API which lacks implementation
Issue #221 (bdwgc).

_WeakPointer_* and _CleanUp_* C functions declared in weakpointer.h
are not implemented (since commit e35a417).

* Makefile.direct (SRCS): Remove weakpointer.h item.
* include/include.am (pkginclude_HEADERS): Likewise.
* include/weakpointer.h: Remove file.

--- a/include/include.am
+++ b/include/include.am
@@ -26,8 +26,7 @@ pkginclude_HEADERS += \
         include/gc_typed.h \
         include/gc_version.h \
         include/javaxfc.h \
-        include/leak_detector.h \
-        include/weakpointer.h
+        include/leak_detector.h
 
 # headers which are not installed
 #
