--- a/.travis.yml
+++ b/.travis.yml
@@ -125,6 +125,11 @@ matrix:
     - CFLAGS_EXTRA="-m32 -D MARK_BIT_PER_OBJ"
     - CONF_OPTIONS="--enable-gc-assertions"
   - os: linux
+    compiler: clang
+    env:
+    - CFLAGS_EXTRA="-D MARK_BIT_PER_OBJ -D USE_CUSTOM_SPECIFIC"
+    - CONF_OPTIONS="--enable-cplusplus"
+  - os: linux
     compiler: gcc
     env:
     - CFLAGS_EXTRA="-D NO_CLOCK -D POINTER_MASK=~0xf"
