--- a/configure.ac
+++ b/configure.ac
@@ -864,6 +864,9 @@ elif test "${enable_handle_fork}" != manual -a x$THREADS = xposix; then
     # If the option is omitted, pthread_atfork handlers are installed
     # by default for the targets where pthread_atfork is known to work.
     case "$host" in
+      *-*-android*)
+        # Android NDK does not provide pthread_atfork.
+        ;;
       *-*-darwin*)
         # The incremental mode (which is off if parallel marking) conflicts
         # with fork handling on Darwin.
