--- a/.travis.yml
+++ b/.travis.yml
@@ -243,7 +243,11 @@ matrix:
     sudo: required
   - os: linux
     env:
-    - CPPCHECK_ENABLE="--enable=unusedFunction"
+    - CPPCHECK_ENABLE="--enable=performance,portability,style,warning extra/gc.c"
+    sudo: required
+  - os: linux
+    env:
+    - CPPCHECK_ENABLE="--enable=unusedFunction extra/gc.c"
     sudo: required
   - os: linux
     compiler: clang
@@ -481,8 +485,7 @@ script:
 - if [[ "$CPPCHECK_ENABLE" != "" ]]; then
     ~/cppcheck/cppcheck -q -f --error-exitcode=2 -U GC_API -U long -D CPPCHECK
         -I include -I libatomic_ops/src $CPPCHECK_ENABLE
-        *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc tools/*.c
-        extra/gc.c;
+        *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc tools/*.c;
   fi
 - if [[ "$TESTS_CUSTOM_RUN" == true ]]; then
     ASAN_OPTIONS="detect_leaks=1" UBSAN_OPTIONS="halt_on_error=1" make check;
